LP3HW - 51st exercise

--- a/projects/gothonweb/gothonweb/templates/index.html
+++ b/projects/gothonweb/gothonweb/templates/index.html
@@ -9,5 +9,7 @@
     {% else %}
       <em>Hello</em>, Whooohoooo!
     {% endif %}
+    </br>
+    <a href="http://127.0.0.1:5000/hello">GO Back</a>
   </body>
 </html>
